--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/03-animations/_animation.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/03-animations/_animation.scss
@@ -23,7 +23,7 @@
 
 .demo-animate {
   background-color: $gray-lighter;
-  border-radius: 8px;
+  border-radius: $rd-brd-lg;
   cursor: pointer;
   padding: 1em;
   text-align: center;
