--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -2,7 +2,7 @@
 
 %input {
   display: block;
-  border-radius: 3px;
+  border-radius: $rd-brd-sm;
   max-width: 100%;
   width: 100%;
   height: 60px;
