--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/_omw-callout.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/_omw-callout.scss
@@ -23,7 +23,7 @@
 .omw-callout__text {
   background-color: $primary-dark;
   padding: 2em 2em 3em 2em;
-  border-radius: 8px;
+  border-radius: $rd-brd-lg;
   color: $white;
   margin-bottom: 1em;
   width: 100%;
