--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/_review-listing.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/_review-listing.scss
@@ -2,7 +2,7 @@
   margin: 4em 0 2em;
   background-color: rgba($off-white, .75);
   padding: 3em 2em 3em 0;
-  border-radius: 0 8px 8px 0;
+  border-radius: 0 $rd-brd-lg $rd-brd-lg 0;
   position: relative;
   
   &::after {
