--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/02-base/_pl-base.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/02-base/_pl-base.scss
@@ -39,7 +39,7 @@
     padding: 1rem .5rem;
     font-size: 2rem;
     text-transform: capitalize;
-    border-radius: 5px;
+    border-radius: $rd-brd-sm;
     margin-bottom: 0;
 
     a {
