--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/checkbox/_checkbox.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/checkbox/_checkbox.scss
@@ -19,8 +19,8 @@
       width: 25px;
       background-color: $white;
       border: 1px solid rgba($gray-lighter, .7);
-      border-radius: 4px;
-      box-shadow: inset 1px 1px 3px rgba($gray-dark, .15);
+      border-radius: $rd-brd-sm;
+      box-shadow: $inset-shadow;
     }
 
     &:checked::after {
