--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/06-buttons/_buttons.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/06-buttons/_buttons.scss
@@ -10,7 +10,7 @@
   text-decoration: none;
   text-align: center;
   font-weight: 600;
-  border-radius: 8px;
+  border-radius: $rd-brd-lg;
 
   @include breakpoint($bp3) {
     padding: 1.25em 2em;
