--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
@@ -3,7 +3,7 @@ $table-border: $gray-light;
 
 .table {
   border: 1px solid $table-border;
-  border-radius: 4px;
+  border-radius: $rd-brd-sm;
   border-spacing: 0;
   background-color: $table-gray;
   margin: 2em 0;
@@ -40,12 +40,12 @@ $table-border: $gray-light;
   &:first-child {
     th:first-child,
     td:first-child {
-      border-radius: 5px 0 0;
+      border-radius: $rd-brd-sm 0 0;
     }
 
     th:last-child,
     td:last-child {
-      border-radius: 0 5px 0 0;
+      border-radius: 0 $rd-brd-sm 0 0;
     }
   }
 
@@ -59,11 +59,11 @@ $table-border: $gray-light;
     }
 
     td:first-child {
-      border-radius: 0 0 0 5px;
+      border-radius: 0 0 0 $rd-brd-sm;
     }
 
     td:last-child {
-      border-radius: 0 0 5px;
+      border-radius: 0 0 $rd-brd-sm;
     }
   }
 }
