--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/autocomplete-dropdown/_autocomplete.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/autocomplete-dropdown/_autocomplete.scss
@@ -7,7 +7,7 @@
   margin: 0;
   padding: .5em 1.5em 2em;
   background-color: $white;
-  box-shadow: 0 4px 4px rgba($black, .25);
+  box-shadow: $shadow;
   border: 1px solid $primary-dark;
   border-top: 1px solid $trust-ltst;
   max-height: 250px;
