--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
@@ -4,11 +4,10 @@
   padding: 1em;
   text-align: center;
   background-color: $off-white;
-  border-radius: 8px;
+  border-radius: $rd-brd-lg;
   font-weight: 300;
   display: block;
   width: 100%;
-
   
   &--secondary {
     background-color: transparent;
