--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -85,12 +85,12 @@
     border-top: 4px solid $trust-ltr;
     border-left: 4px solid $trust-ltr;
     border-bottom: 4px solid $trust-ltr;
-    border-radius: 5px 0 0 5px;
+    border-radius: $rd-brd-sm 0 0 $rd-brd-sm;
     width: 96%;
     padding: 2em 2em 3em;
     margin-top: 20%;
     margin-left: 4%;
-    box-shadow: 0 2px 8px rgba($black, 0.15);
+    box-shadow: $shadow;
 
     @include breakpoint($bp0) {
       width: 90%;
@@ -100,7 +100,7 @@
 
     @include breakpoint($bp2) {
       border: 4px solid $trust-ltr;
-      border-radius: 5px;
+      border-radius: $rd-brd-sm;
       margin-top: 30%;
       display: inline-block;
       float: right;
