--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -33,11 +33,11 @@
   border-top: 4px solid $trust-ltr;
   border-right: 4px solid $trust-ltr;
   border-bottom: 4px solid $trust-ltr;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 $rd-brd-sm $rd-brd-sm 0;
   width: 96%;
   padding: 2em 1em 2em 2em;
   margin-top: 15%;
-  box-shadow: 0 2px 8px rgba($black, 0.15);
+  box-shadow: $shadow;
   position: relative;
   z-index: 1;
 
@@ -48,7 +48,7 @@
 
   @include breakpoint($bp2) {
     border: 4px solid $trust-ltr;
-    border-radius: 5px;
+    border-radius: $rd-brd-sm;
     width: 75%;
     padding: 2em;
   }
@@ -59,7 +59,7 @@
     padding-right: 28%;
     box-shadow: none;
     position: static;
-    border-radius: 8px;
+    border-radius: $rd-brd-lg;
   }
 
   @include breakpoint($bp4) {
