--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -6,7 +6,7 @@
 .filter__toggle {
   background-color: rgba($trust-ltst, .6);
   color: $primary-dark;
-  border-radius: 8px;
+  border-radius: $rd-brd-lg;
   text-align: center;
   display: block;
   border: 0;
@@ -28,7 +28,7 @@
   }
 
   .is-active & {
-    border-radius: 8px 8px 0 0;
+    border-radius: $rd-brd-lg $rd-brd-lg 0 0;
 
     .filter__toggle--close {
       display: inline;
@@ -54,7 +54,7 @@
   justify-content: space-between;
   background-color: rgba($trust-ltst, .6);
   padding: 1em 2em;
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
   width: 100%;
 
   display: none;
@@ -69,7 +69,7 @@
     display: flex;
     visibility: visible;
     flex-wrap: nowrap;
-    border-radius: 8px 0 0 8px;
+    border-radius: $rd-brd-lg 0 0 $rd-brd-lg;
   }
 
   &::after {
