--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/_listing-search.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/_listing-search.scss
@@ -42,7 +42,7 @@
     margin-right: 1em;
     margin-bottom: 0;
     border: 2px solid $primary-dark;
-    border-radius: 5px;
+    border-radius: $rd-brd-sm;
   }
 
   @include breakpoint($bp2) {
