--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -29,10 +29,10 @@
   border-top: 4px solid $trust-ltr;
   border-right: 4px solid $trust-ltr;
   border-bottom: 4px solid $trust-ltr;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 $rd-brd-sm $rd-brd-sm 0;
   width: 96%;
   padding: 2em 1em 2em 2em;
-  box-shadow: 0 2px 8px rgba($black, 0.15);
+  box-shadow: $shadow;
   position: relative;
   z-index: 1;
 
@@ -42,7 +42,7 @@
 
   @include breakpoint($bp2) {
     border: 4px solid $trust-ltr;
-    border-radius: 5px;
+    border-radius: $rd-brd-sm;
     padding: 3em 2em;
     width: 100%;
   }
@@ -50,7 +50,7 @@
   @include breakpoint($bp3) {
     box-shadow: none;
     position: static;
-    border-radius: 8px;
+    border-radius: $rd-brd-lg;
     background-color: transparent;
     padding-right: 28%;
     width: 80%;
@@ -105,7 +105,7 @@
   color: $white;
   text-transform: uppercase;
   font-weight: 600;
-  border-radius: 0 6px 6px 0;
+  border-radius: 0 $rd-brd-sm $rd-brd-sm 0;
   z-index: -10;
   
   &::before {
