--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -180,7 +180,7 @@
   }
   
   @include breakpoint($bp3) {
-    border-radius: 0 0 8px 8px;
+    border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
   }
 }
 
@@ -278,7 +278,7 @@
     background-color: $trust-ltst;
     padding: .9em 1.25em .5em 1em;
     z-index: 20;
-    border-radius: 0 0 8px 8px;
+    border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
     
     svg {
       height: 1.5em;
