--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -1,6 +1,6 @@
 .teaser {
   border: 4px solid $trust-ltst;
-  border-radius: 5px;
+  border-radius: $rd-brd-sm;
   padding: 1em 1em 2.5em;
   margin: 100px 0 3em;
   position: relative;
@@ -314,7 +314,7 @@
   padding: .25em .5em;
   margin-right: .25em;
   background-color: $off-white;
-  border-radius: 5px;
+  border-radius: $rd-brd-sm;
 }
 
 .teaser.location {
