add service tile listing to service landing

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-landing/service-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-landing/service-landing.twig
@@ -14,6 +14,10 @@
       boxes: boxes
     } %}
     
+    {% include "@organisms/service-tile-listing/service-tile-listing.twig" with {
+      header: services_header,
+      lede: services_lede
+    } %}
     
     {% include "@organisms/anchored-cta-block/anchored-cta-block.twig" with {
       "title": cta.title,
