--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/_page.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/_page.twig
@@ -64,6 +64,7 @@
   {% block page_header %}
     {{ page.breadcrumb }}
     {{ page.page_header }}
+    {{ page.page_filters }}
   {% endblock %}
 
   {% block top_sidebar %}
