update service page based on feedback from Jill

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/service-tile/_service-tile.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/service-tile/_service-tile.scss
@@ -27,8 +27,8 @@
 
 .service-tile__subservices {
   list-style: none;
-  margin: 0 0 1.5em;
-  padding: 0 1.5rem;
+  margin: 0;
+  padding: 0 1.5rem 1.5rem;
   
   a:link,
   a:visited {
