--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-landing/service-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-landing/service-landing.twig
@@ -16,7 +16,8 @@
     
     {% include "@organisms/service-tile-listing/service-tile-listing.twig" with {
       header: services_header,
-      lede: services_lede
+      lede: services_lede,
+      id: services_id
     } %}
     
     {% include "@organisms/anchored-cta-block/anchored-cta-block.twig" with {
