--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -140,7 +140,7 @@
   a:focus {
     text-decoration: underline;
   }
-  
+
   .teaser--small & {
     @include adjust-font-size-to($sm-heading, 1.1);
     background-color: transparent;
@@ -151,7 +151,7 @@
     position: relative;
     margin-top: 1em;
     width: calc(100% - 225px);
-    
+
     .teaser--small & {
       position: static;
       width: auto;
@@ -165,7 +165,7 @@
     margin-top: 0;
     margin-bottom: -2.25em;
     top: -2.25em;
-    
+
     .teaser--small & {
       display: block;
       position: static;
@@ -188,7 +188,7 @@
       justify-content: flex-start;
     }
   }
-  
+
   @include breakpoint($bp3 1349px) {
     position: relative;
     top: -3em;
@@ -244,7 +244,7 @@
   @include breakpoint($bp3) {
     margin-bottom: .25em;
   }
-  
+
   .teaser--small & {
     .icon-button {
       width: 140px;
@@ -273,7 +273,7 @@
     left: 1.75em;
     transform: none;
   }
-  
+
   @include breakpoint($bp3) {
     right: 0;
     left: auto;
@@ -289,7 +289,7 @@
     margin: 25px 0 0;
     margin-left: auto;
   }
-  
+
   @include breakpoint($bp5) {
     width: 260px;
   }
@@ -343,6 +343,10 @@
 
 .teaser__row {
   display: block;
+
+  .address {
+    margin: 0;
+  }
 }
 
 
@@ -372,7 +376,7 @@
 
 .teaser__content__desc {
   margin-bottom: 1em;
-  
+
   p:last-child {
     margin-bottom: 0;
   }
@@ -427,7 +431,7 @@
 }
 
 .teaser__link--small {
-  
+
   @include breakpoint($bp3) {
     flex: 1 1 20%;
     text-align: right;
@@ -442,14 +446,14 @@
   text-transform: uppercase;
   text-decoration: none;
   position: relative;
-  
+
   svg {
     height: .75em;
     width: .75em;
     fill: $trust-aa;
     margin-left: .25em;
   }
-  
+
   &:active,
   &:hover,
   &:focus {
@@ -457,11 +461,11 @@
       fill: $primary-dark;
     }
   }
-  
+
   @include breakpoint($bp3) {
     @include adjust-font-size-to($crumb, .5);
     margin-right: 1.75em;
-    
+
     svg {
       position: absolute;
       height: 100%;
