TH-299 set link

--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -86,7 +86,7 @@
         "rating": content.field_rating_overall.0['#markup'],
       },
       "link": {
-        "url": "/",
+        "url": url,
         "text": "Request an Appointment",
         "icon": icon,
       }
