--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -127,6 +127,7 @@
     @include breakpoint($bp3) {
       display: flex;
       justify-content: space-between;
+      align-items: center;
     }
   }
   
@@ -154,26 +155,21 @@
   
   .basic-header--img & {
     border-bottom: 0;
-    background-color: $white;
+    background-color: $trust-aa;
     padding: 2em 2em 2em 0;
     border-radius: 0 8px 8px 0;
     margin-top: auto;
     bottom: -200px;
-    border: 6px solid $trust-ltst;
-    border-left: none;
     
     &::before {
       position: absolute;
-      top: -6px;
-      bottom: -6px;
+      top: 0;
+      bottom: 0;
       width: 2em;
       border-bottom: 0;
       left: -2em;
-      background-color: $white;
-      height: 104%;
-      height: calc(100% + 12px);
-      border-top: 6px solid $trust-ltst;
-      border-bottom: 6px solid $trust-ltst;
+      background-color: $trust-aa;
+      height: 100%;
       
       @include breakpoint($bp6) {
         width: calc(1.9em + (100vw - 1500px));
@@ -183,10 +179,10 @@
     
     @include breakpoint($bp2) {
       bottom: auto;
-      background-color: rgba($white, .8);
+      background-color: rgba($trust-aa, .9);
       
       &::before {
-        background-color: rgba($white, .8);
+        background-color: rgba($trust-aa, .9);
       }
     }
     
@@ -195,7 +191,12 @@
     }
     
     .basic-header__title {
-      margin-top: 0;  
+      margin-top: 0;
+      color: $white;  
+    }
+    
+    .basic-header__lede {
+      color: $white;
     }
   }
   
@@ -237,11 +238,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 1em 0 0;
-  padding: 1em 0 0;
+  margin: 1.5em 0 0;
+  padding: 1.5em 0 0;
   text-align: center;
   position: relative;
   z-index: 3;
+  border-top: 1px solid $trust-ltst;
   
   @include breakpoint($bp3) {
     border: none;
@@ -267,6 +269,24 @@
       }
     }
   }
+  
+  .basic-header--img & {
+    .icon-button {
+      svg {
+        fill: $white;
+      }
+      
+      color: $white;
+      background-color: $primary-dark;
+    }
+    
+    .icon-button:active,
+    .icon-button:focus,
+    .icon-button:hover {
+      background-color: darken($primary-dark, 5%);
+      
+    }
+  }
 }
 
 .basic-header__cta__label {
@@ -275,11 +295,19 @@
   margin-bottom: 1em;
   text-transform: uppercase;
   width: 100%;
+  
+  .basic-header--img & {
+    color: $white;
+  }
 }
 
 .basic-header__cta__text {
   @include adjust-font-size-to($sm-text, .85);
   margin: 0 1em;
+  
+  .basic-header--img & {
+    color: $white;
+  }
 }
 
 .basic-header__cta__link {
@@ -287,4 +315,9 @@
   text-decoration: none;
   font-weight: 600;
   text-transform: uppercase;
+  
+  .basic-header--img & {
+    color: $white;
+    text-decoration: underline;
+  }
 }
