create sidebar cta list component

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
@@ -59,7 +59,9 @@
   }
   
   &.icon-button--list {
-    margin-left: 2em;
+    @include breakpoint($bp2 899px) {
+      margin-left: 2em;
+    }
   }
 
   &.icon-button--small {
