create a sidebar list molecule

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
@@ -30,12 +30,11 @@
       items: link_list.items,
     } %}
     
-    
   {% endblock %}
   
   {% block bottom_page_sidebar %}
     <div class="sidebar--growth js-section-animation">
-      Related Services
+      {% include "@molecules/sidebar-list/sidebar-list.twig" %}
     </div>
   {% endblock %}
   
