create a custom card component

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -26,7 +26,7 @@ $wisdom-lt: #ab96c8;
 $wisdom-ltr: #c2b6d9;
 $wisdom-ltst: #ded7eb;
 
-$growth-drk: #51692B
+$growth-drk: #51692B;
 $growth-aa: #627f34;
 $growth-lg: #7b9f41;
 $growth: #8db750;
