--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -1,32 +1,59 @@
-.card__title {
-  @extend %h2;
-  @include no-bottom;
+.card {
+  background-color: $white;
+  box-shadow: 0 4px 8px rgba($black, .25);
+  border-radius: 8px;
+}
 
-  &-link {
-    @include link;
+.card__image {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 8px 8px 0 0;
+  border-bottom: 4px solid $growth;
+  
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+    .no-objectfit & {
+      width: 100%;
+      height: auto;
+    }
   }
 }
 
-.card__subtitle {
-  @extend %h3;
-  @include no-bottom;
-  color: $gray;
+.card__content {
+  padding: 2em;
 }
 
-.card__body {
-  margin: 0.7em 0 1em;
+.card__title {
+  @include adjust-font-size-to($md-heading, 1.25);
+  margin-top: 0;
+  margin-bottom: .25em;
+  
+  a:link,
+  a:visited {
+    color: $gray-dark;
+    text-decoration: none; 
+  }
+  
+  a:active,
+  a:hover,
+  a:focus {
+    color: $trust-aa;
+    text-decoration: underline;
+  }
 }
 
-.card__link {
-  @include link;
+.card__desc{
+  @include adjust-font-size-to($sm-text, .95);
 }
 
-.card__button {
-  @include button;
+.card__cta {
+  display: inline-block;
+  margin-top: .75em;
+  font-weight: 600;
+  text-decoration: none;
 }
 
-// Variations
-.card--bg {
-  background-color: $gray-light;
-  padding: 1em;
-}
