--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
@@ -39,7 +39,7 @@
   {% endblock %}
   
   {% block full_content %}
-    Components go here.
+    {% include "@organisms/card-group/card-group.twig" %}
   {% endblock %}
   
 {% endembed %}
