--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -1,7 +1,11 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: $white;
   box-shadow: 0 4px 8px rgba($black, .25);
   border-radius: 8px;
+  margin-bottom: 1em;  
 }
 
 .card__image {
