--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/card.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/card.twig
@@ -1,6 +1,6 @@
 <div class="card {% if card.type %}card--{{card.type}}{% endif %}">
   {% if card.image %}
-  {% if card.url.link %}<a href="{{ card.url.link }}">{% endif %}
+  {% if card.url.link %}<a class="card__image-link" href="{{ card.url.link }}">{% endif %}
   <div class="card__image">
     <img src="{{ card.image.src }}" alt="{{ card.image.alt }}" />
   </div>
