--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/_link-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/_link-list.scss
@@ -2,6 +2,7 @@
   padding: 2em 0;
   position: relative;
   margin-top: 3em;
+  margin-bottom: 3em;
   border-top: 6px solid $growth;
 
   &::before {
