--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/patient-story/patient-story.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/patient-story/patient-story.twig
@@ -1,10 +1,12 @@
 <div class="patient-story {% if type %}patient-story--{{type}}{% endif %}">
   <div class="patient-story__container">
+    {% if image %}
     <div class="patient-story__image">
       {% if cta %}<a href="{{ cta.link }}">{% endif %}
       <img src="{{ image.src }}" alt="{{ image.alt }}" />
       {% if cta %}</a>{% endif %}
     </div>
+    {% endif %}
     <div class="patient-story__content">
       {% if label %}
       <span class="patient-story__label">{{ label }}</span>
@@ -14,7 +16,7 @@
       </blockquote>
       
       {% if cta %}
-        <a class="patient-story__cta" href="{{cta.link}}">{{ cta.label }}</a>
+        <a class="patient-story__cta" href="{{cta.link}}">{{ cta.label }} {% include "@base/icons/arrow.svg" %}</a>
       {% endif %}
     </div>
   </div>
