include patient story on service detail page

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
@@ -40,6 +40,14 @@
   
   {% block full_content %}
     {% include "@organisms/card-group/card-group.twig" %}
+    
+    {% include "@organisms/patient-story/patient-story.twig" with {
+      image: story.image,
+      label: story.label,
+      type: story.type,
+      quote: story.quote,
+      cta: story.cta
+    } %}
   {% endblock %}
   
 {% endembed %}
