--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -44,7 +44,7 @@
     {% if provider.link %}
     <div class="teaser__button">
       {% include "@atoms/icon-button/icon-button.twig" with {
-        "url": provider.link.url,
+        "url": provider.link.href,
         "icon": provider.link.icon,
         "text": provider.link.text,
         "variation": "small",
