TH-299 fix star rendering

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
@@ -18,15 +18,17 @@
   {% set rating_round = 'fourh' %}
 {% endif %}
 
+{% if icon is empty %}
+  {% set icon = "star.svg" %}
+{% endif %}
+
 <div class="ratings-count">
   {{ rating }} of 5
   <div class="ratings-count__stars ratings-count__stars--{{rating_round}}">
-    {% include 'star.svg' %}
-    {% include 'star.svg' %}
-    {% include 'star.svg' %}
-    {% include 'star.svg' %}
-    {% include 'star.svg' %}
+    {% include icon %}
+    {% include icon %}
+    {% include icon %}
+    {% include icon %}
+    {% include icon %}
   </div>
 </div>
-
-
