--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -84,6 +84,7 @@
         "focus": content.field_area_interest_ref,
         "location": location,
         "rating": content.field_rating_overall.0['#markup'],
+        "icon": icon_path,
       },
       "link": {
         "url": url,
