--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -4,16 +4,15 @@
   justify-content: center;
   background-color: $white;
   box-shadow: 0 4px 8px rgba($black, .25);
-  border-radius: 8px;
+  border-radius: 0 0 8px 8px;
   margin-bottom: 1em;  
+  border-top: 6px solid $trust;
 }
 
 .card__image {
   width: 100%;
   height: 200px;
   overflow: hidden;
-  border-radius: 8px 8px 0 0;
-  border-bottom: 4px solid $growth;
   
   img {
     width: 100%;
