add in animations

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -60,3 +60,12 @@
   text-decoration: none;
 }
 
+.cssanimations {
+  .card {
+    opacity: 0;
+  }
+  
+  .card.in-view {
+    animation: fadeInUp .5s ease .25s forwards;
+  }
+}
