--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/card.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/card.twig
@@ -1,4 +1,4 @@
-<div class="card {% if card.type %}card--{{card.type}}{% endif %}">
+<div class="card {% if card.type %}card--{{card.type}}{% endif %} js-section-animation">
   {% if card.image %}
   {% if card.url.link %}<a class="card__image-link" href="{{ card.url.link }}">{% endif %}
   <div class="card__image">
