--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/patient-story/patient-story.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/patient-story/patient-story.twig
@@ -1,4 +1,4 @@
-<div class="patient-story {% if type %}patient-story--{{type}}{% endif %}">
+<div class="patient-story {% if type %}patient-story--{{type}}{% endif %} js-section-animation">
   <div class="patient-story__container">
     {% if image %}
     <div class="patient-story__image">
